--- a/base.html
+++ b/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='Style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='Script.js') }}"></script>
 </head>
 
