--- a/base.html
+++ b/base.html
@@ -12,5 +12,9 @@
     <p>{{books["book"]["year"]}} {{books["book"]["rating"]}} {{books["book"]["length"]}}<p>
     <img src="{{url_for('static', filename='books["book"]["image"]')}}" alt="{{books["book"]["name"]}}"">
     <p>{{books["book"]["description"]}}</p>
+    <h2>Reviews</h2>
+    {{% for review in reviews %}}
+    
+    {%endfor%}
 </body>
 </html>
